kubernetes/tools/vaultwarden-forward/base/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-forward
spec:
  ports:
    - port: 9432
      targetPort: 9432
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vaultwarden-forward
subsets:
  - addresses:
      - ip: 192.168.0.5
    ports:
      - port: 9432
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-forward
  annotations:
    external-dns.alpha.kubernetes.io/target: vps.wagner.gg
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx-public
  rules:
    - host: vault.wagner.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-forward
                port:
                  number: 9432
